--- a/_posts/2013-01-26-2013年想做的事儿.md
+++ b/_posts/2013-01-26-2013年想做的事儿.md
@@ -3,7 +3,7 @@ layout: post
 title: "2013年想做的事儿"
 description: "言践于行这道理我当然知道"
 category: 愤笔
-tags: [吾念]
+tags: [吾念,西游记]
 ---
 {% include JB/setup %}
 
